--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+	<header>
+		<h1>Caleb J. Vinson</h1>
+		<nav>
+			<ul>
+				
+			</ul>
+		</nav>
+	</header>
 	<h1>Hello World!</h1>
   </body>
 </html>
