--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 		<h1>Caleb J. Vinson</h1>
 		<nav>
 			<ul>
-				
+				<li><a href = "#About-Me">About Me</a></li>
+				<li><a href = "#Academics">Academics</a></li>
+				<li><a href = "#Projects">Projects</a></li>
+				<li><a href = "#Involvement">Involvement</a></li>
 			</ul>
 		</nav>
 	</header>
+	  <section>
+		  <h2 id = "About-Me">About Me</h2>
+	  </section>
+	  <main>
+		  
+	  </main>
 	<h1>Hello World!</h1>
   </body>
 </html>
