--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	<header>
-		<h1 id = "logo">Caleb J. Vinson</h1>
+		<h1>Caleb J. Vinson</h1>
 		<nav>
 			<ul>
 				<li><a href = "#About-Me">About Me</a></li>
