--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		    display: flex;
 		    align-items: center;
 		    justify-content: space-between;
-		    top: 0px;padding: 10px 20px;
+		    padding: 10px 20px 10px;
 	    }
 
 	    .nav-list {
