--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
 			</ul>
 		</nav>
 	</header>
+	  <!-- Top navigation -->
+<div class="topnav">
+    <!-- Centered link -->
+    <div class="topnav-centered">
+        <a href="#home" class="active">Home</a>
+    </div>
+    <!-- Left-aligned links (default) -->
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <!-- Right-aligned links -->
+    <div class="topnav-right">
+        <a href="#search">Search</a>
+        <a href="#about">About</a>
+    </div>
+</div>
+
 	  <section>
 		  <h2 id = "About-Me">About Me</h2>
 	  </section>
