--- a/index.html
+++ b/index.html
@@ -45,21 +45,25 @@
     </style>
   </head>
   <body>
-	  <!-- Top navigation -->
-	<div class="topnav">
+	  <header>
+		<h1>Caleb J. Vinson</h1>
+	  </header>
+	  <div class="topnav">
 	    <!-- Centered link -->
 	    <div class="topnav-centered">
-	        <a href="#home" class="active">Home</a>
+		<a href="#Academics" class="active">Academics</a>
+		<a href="#Research" class="active">Research</a>
+		<a href="#Projects" class="active">Projects</a>
+	        <a href="#Home" class="active">Home</a>
+		<a href="#Work" class="active">Work</a>
+		<a href="#Extracurriculars" class="active">Extracurriclars</a>
+		<a href="#About-Me" class="active">About Me</a>
 	    </div>
 	    <!-- Left-aligned links (default) -->
 	    <a href="#news">News</a>
 	    <a href="#contact">Contact</a>
 	    <!-- Right-aligned links -->
-	    <div class="topnav-right">
-	        <a href="#search">Search</a>
-	        <a href="#about">About</a>
-	    </div>
-	</div>
+	  </div>
 	  <section>
 		  <h2 id = "About-Me">About Me</h2>
 	  </section>
