--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    }
 
 	    body {
-		    font-family: 'Arial', sans-serif;
+		    font-family: 'Helvetica', sans-serif;
 	    }
 	    .navbar {
 		    display: flex;
@@ -46,7 +46,7 @@
   </head>
   <body>
 	  <header>
-		<h1>Caleb J. Vinson</h1>
+		<h1 class = "navbar">Caleb J. Vinson</h1>
 	  </header>
 	  <div class="topnav">
 	    <!-- Centered link -->
