--- a/index.html
+++ b/index.html
@@ -7,29 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Caleb J. Vinson</h1>
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
     </header>
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__item"><a href="#academics" class="nav__link">Academics</a></li>
-            <li class="nav__item"><a href="#research" class="nav__link">Research</a></li>
-            <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-            <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-            <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-            <li class="nav__item"><a href="#extracurriculars" class="nav__link">Extracurriculars</a></li>
-        </ul>
-    </nav>
-    <section class="hero">
-        <div class="greeting">
-            <h2>Welcome!</h2>
-            <p>Discover the journey, achievements, and aspirations of Caleb J. Vinson.</p>
-        </div>
-    </section>
+	<div class="hero-image">
+  		<div class="hero-text">
+    		<h1>I am John Doe</h1>
+   		<p>And I'm a Photographer</p>
+    		<button>Hire me</button>
+		</div>
+	</div>
 </body>
 </html>
 		  
