--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ body, html {
   background-color: #ddd;
   text-align: center;
   cursor: pointer;
+  border-radius: 20px;
 }
 
 .hero-text button:hover {
@@ -48,9 +49,9 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">I am John Doe</h1>
-    <p>And I'm a Photographer</p>
-    <button>Hire me</button>
+    <h1 style="font-size:50px">My Name is Cal Vinson</h1>
+    <p>Welcome to my Page!</p>
+    <button>Cv</button>
   </div>
 </div>
 
