--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {
   <div class="hero-text">
     <h1 style="font-size:50px">My Name is Cal Vinson</h1>
     <p>Welcome to my Page!</p>
-    <button>Cv</button>
+    <button>CV</button>
   </div>
 </div>
 
